fix: z-index to visibility loader

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,7 +64,7 @@ body {
 }
 @keyframes loading {
   100% {
-    z-index: -999;
+    visibility: hidden;
   }
 }
 @keyframes lds-ellipsis1 {
